<resources>
    <string name="app_name">Unit Coverter</string>

    <string-array name="conversionChoices">
        <item>farenheight to celsius</item>
        <item>lb to kg</item>
        <item>miles to kilometers</item>
        <item>feet to meter</item>
    </string-array>

</resources>